fix: make the header align properly

--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -9,6 +9,7 @@ $w700px: 700px;
   position: relative;
   width: 100vw;
   max-width: 1500px;
+  margin: 0 auto;
   height: 500px;
   color: #fff;
   padding: 0 8% 1.1rem;
